2008-06-21 Jim Garlick <garlick@llnl.gov>

	* powerman.spec: Test %{?fedora} not %{?fc9}, %{?chaos} not %{?ch4}.
	Add test for %{?rhel}.

	* etc/ics8064.dev, etc/hp3488.dev : New gpib-utils devices.

	* tests/t37-t40, tests/gpib.c : Tests for above.

	* test/t32.exp : Added missing file.
	
	* test/icebox.c : Fix incorrect plug array declaration.

2008-06-19 Jim Garlick <garlick@llnl.gov>

	* etc/powerman.dev : Implement ranged scripts.

	* test/t35 : Test for powerman vs powerman configuration.

2008-06-18 Jim Garlick <garlick@llnl.gov>

	* test/icebox.c, t29 thru t34 : Tests for icebox support.

	* etc/icebox3.dev : Make it work for v3 and v4.

	* etc/icebox4.dev : Removed.

	* etc/mcr.conf : Test harness version of mcr powerman.conf.

	* examples/* : Removed as the examples were out of date and there
	are now plenty in test/*.conf.

	* src/xpty.[ch], src/device_pipe.c, src/device_serial.c,
	src/device_tcp.c, src/client.c : Factor out nonblock_set() and
	nonblock_clr() functions.

2008-06-18 Albert Chu <chu11@llnl.gov>

	* etc/ipmipower.dev: Fix tabbing.

2008-06-18 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.1

	* powerman.spec: Add fc9 stanza.

2008-06-17 Jim Garlick <garlick@llnl.gov>

	* src/device.c : Fix bug where expired delays could be extended by
	the device timeout.

	* test/baytech.c : Fix bug in plug array declarations.

	* test/tregex.c : Initialize error.c for out of memory case.

	* src/poweramn.c : Make argument handling fully backwards compat
	with powerman-2.0 and earlier.

2008-06-16 Jim Garlick <garlick@llnl.gov>

	* etc/apcpdu3.dev : Fixed problem with intermittent failures
	of query script.

	* etc/apcpdu.dev : Backport change from above.

2008-06-13 Jim Garlick <garlick@llnl.gov>

	* test/baytech.c : Add classic baytech rpc3 support.

	* test/t25, test/t26 : Investigate some funny business with delay
	handling.

	* test/27, test/28 : Check classic baytech functionality.

2008-06-12 Jim Garlick <garlick@llnl.gov>
