@@ -1,3 +1,8 @@
+2008-06-22 Jim Garlick <garlick@llnl.gov>
+
+	* src/plmpower.c : Add support for SmartLabs PLM 2412S Insteon
+	controller.
+
 2008-06-21 Jim Garlick <garlick@llnl.gov>
 
 	* powerman.spec: Test %{?fedora} not %{?fc9}, %{?chaos} not %{?ch4}.
